--- a/.github/workflows/codacy-coverage-reporter.yaml
+++ b/.github/workflows/codacy-coverage-reporter.yaml
@@ -8,7 +8,18 @@ jobs:
     name: codacy-coverage-reporter
     steps:
       - uses: actions/checkout@v2
+      
+      - name: unittest
+        run: go test ./...
+        
+      - name: Test
+        run: go test -coverprofile=cover.out -coverpkg=./... ./...
+      
       - name: Codacy Coverage Reporter
         uses: codacy/codacy-coverage-reporter-action@v1.3.0
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: cover.out
+          language: go
+          force-coverage-parser: go
+          
