--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,8 +1,69 @@
+run:
+  timeout: 5m
+  modules-download-mode: readonly
+
 linters:
   disable-all: true
+  fast: false
   enable:
+    - bodyclose
+    - dogsled
+    - durationcheck
+    - exportloopref
+    - govet
     - gosimple
-    - structcheck
+    - gofmt
+    - gofumpt
+    - goconst
+    - goimports
+    - gomnd
+    - gocyclo
+    - ineffassign
+    - prealloc
+    - staticcheck
     - typecheck
     - unused
-    - varcheck
+    - whitespace
+    - unconvert
+    - misspell
+
+  # don't enable
+  # - wastedassign
+  # - revive
+  # - lll
+  # - errcheck
+  # - asciicheck
+  # - scopelint
+  # - gochecknoglobals
+  # - gocognit
+  # - godot
+  # - godox
+  # - goerr113
+  # - interfacer
+  # - maligned
+  # - nestif
+  # - prealloc
+  # - testpackage
+  # - stylrcheck
+  # - wsl
+
+linters-settings:
+  govet:
+    check-shadowing: true
+  whitespace:
+    multi-func: true
+  lll:
+    line-length: 200
+  gomnd:
+    # don't include the "operation", "argument" and "assign"
+    checks: 
+      - case
+      - condition
+      - return
+  goconst:
+    ignore-tests: true
+  gocyclo:
+    # recommend 10-20
+    min-complexity: 50
+  misspell: # Finds commonly misspelled English words in comments
+    locale: US
